# Django-CRM

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  rav.yaml  requirements.prod.txt
DjangoCRM/: asgi.py  settings.py  urls.py  wsgi.py
src/: manage.py  requirements.txt
src/contacts/: admin.py  models.py  urls.py  views.py
src/contacts/migrations/: 0001_initial.py  0002_contact_user.py
src/crm/: asgi.py  settings.py  urls.py  wsgi.py
src/dashboard/: urls.py  views.py
src/templates/: about.html  base.html  dashboard.html
src/templates/base/: css.html  messages.html
src/templates/contacts/: list.html
src/templates/dashboard/: base.html  main.html  nav.html  sidebar.html
